# laido

./: .gitignore  AGENTS.md  agents.yaml
Unity/Assets/IAIDO/: README.md
Unity/Assets/IAIDO/Scripts/AI/: AIAgent.cs
Unity/Assets/IAIDO/Scripts/Audio/: AudioController.cs
Unity/Assets/IAIDO/Scripts/Combat/: CombatResolver.cs  Openings.cs
Unity/Assets/IAIDO/Scripts/Core/: DeterministicClock.cs  DuelEnums.cs  DuelLogger.cs  TimingConfig.cs
Unity/Assets/IAIDO/Scripts/Game/: DuelStateMachine.cs  GameController.cs
Unity/Assets/IAIDO/Scripts/Input/: SwipeDetector.cs
Unity/Assets/IAIDO/Scripts/Sim/: LocalPvPSim.cs
Unity/Assets/IAIDO/Scripts/UI/: DuelViewController.cs
agents/docs/: BUILD_DECREE_48H.md  PERF_BUDGET.md
agents/logs/: goals.md  tandem_proof.md  tandem_proof_expanded.md
agents/skills/: anti_cheat.yaml  audio_visual.yaml  mobile_build.yaml  networking.yaml  tutorial.yaml  ui_ux.yaml
assets/: README.md
bevy_iaido/: Cargo.toml  PROSPECT.md  README.md  WEB_SPEC.md  build.rs  index.html  remove_bg.py  review.md  rules.md
bevy_iaido/android/: AndroidManifest.xml
bevy_iaido/assets/atlas/red_parry/: index.html  labels.json
bevy_iaido/assets/atlas/red_samurai/: index.html  labels.json
bevy_iaido/assets/atlas/red_samurai/_incoming/: index.html  labels.json
bevy_iaido/assets/atlas/white_samurai/: index.html  labels.json  white_samurai_controller.json
bevy_iaido/examples/: iaido.rs
bevy_iaido/src/: ai.rs  combat.rs  config.rs  duel.rs  events.rs  hud.rs  input.rs  lib.rs  logging.rs  main.rs  plugin.rs  rng.rs  state_machine.rs  touch.rs  types.rs  visuals.rs
bevy_iaido/tests/: core.rs
bevy_iaido/tools/: rembg_grid_slicer.py  sprite_explorer.py  sprite_grid_slicer.py
