[package]
name = "bevy_iaido"
version = "0.1.0"
edition = "2021"
description = "Deterministic, ultra-fast directional duel core for Bevy (mobile-optimized)"
license = "UNLICENSED"

[lib]
name = "bevy_iaido"
path = "src/lib.rs"

[features]
default = []
bevy = ["dep:bevy", "dep:bevy_kira_audio"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

# Optional Bevy integration kept minimal for portability in restricted environments
bevy = { version = "0.14", default-features = false, optional = true, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
] }
bevy_kira_audio = { version = "0.19", optional = true }

[dev-dependencies]
serde_json = "1.0"
