[package]
name = "bevy_iaido"
version = "0.1.0"
edition = "2021"
description = "Deterministic, ultra-fast directional duel core for Bevy (mobile-optimized)"
license = "UNLICENSED"

[lib]
name = "bevy_iaido"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["bevy"]
bevy = ["dep:bevy", "dep:bevy_kira_audio"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

# Optional Bevy integration kept minimal for portability in restricted environments
bevy = { version = "0.14", default-features = false, optional = true, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "png",
    "webgl2",
] }
bevy_kira_audio = { version = "0.20", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.0", features = ["js"] }
bevy_tweening = "0.11.0"
rand = "0.8"

[dev-dependencies]
serde_json = "1.0"

[package.metadata.android]
package = "com.bevy_iaido.game"
label = "Iaido"
assets = "assets"
android_manifest = "android/AndroidManifest.xml"
build_targets = ["aarch64-linux-android"]
android_version = 34
target_sdk_version = 34
